Bug 154603 - Context menu's 'Transpose' does nothing when pasting text copied from outside LO: should be unavailable or greyed out
Summary: Context menu's 'Transpose' does nothing when pasting text copied from outside...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.5.2 release
Hardware: All All
: low minor
Assignee: Babacea Alexandru
URL:
Whiteboard: target:26.2.0
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks: Context-Menu
  Show dependency treegraph
 
Reported: 2023-04-04 13:08 UTC by nat.carrasco@yahoo.fr
Modified: 2025-07-07 15:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nat.carrasco@yahoo.fr 2023-04-04 13:08:02 UTC
Description:
Hello,
1 when I Copy texts from web and past it with "transpose" , it doesn't works, nothing appears on the file,
 so I past with "special past", and then I cut and transpose, because Calc doesn't remember (-of course -grr-) what I have past on last !

 suggestion :
On first, It will be convenient to have
1. a "transpose" button in the special paste window.

2. to be able to directly paste what has been copied,

2.and finally to know the keyboard shortcuts corresponding to "tranpose".

thank you, and forgive my english language.

LibreOffice 7.3.5.2.

Steps to Reproduce:
1.change version
2.open soft a 2nd time
and open a web page
3.copy text, for example 8 lines
4.select a cell
5. clic on "tranpose "

Actual Results:
no text apears

Expected Results:
text apears in 8 columns instead of 8 lines


Reproducible: Didn't try


User Profile Reset: No

Additional Info:
i dont know
Comment 1 Julien Nabet 2023-04-04 14:51:11 UTC
Could you give a try to last stable LO version 7.4.6 ?
Comment 2 ady 2023-04-04 21:00:25 UTC
Paste (special) Transpose is aimed at range of cells, not text from some (random) other software.
Comment 3 Stéphane Guillou (stragu) 2023-04-04 21:56:31 UTC
Either this report is an enhancement request to allow direct 'transpose' when pasting multi-line text, or it is a bug report to "Remove Transpose option from context menu when if does not apply".

If it is implemented for HTML, users might expect it to be implemented for plain text too, which conflicts with the Text Import dialog.

However, for HTML tables, I can see how one would expect "right click > Paste Special > Transpose" to work, since it's available in the context menu.
Comment 4 Heiko Tietze 2023-04-05 08:53:54 UTC
We have two functions. First the text import, where you do paste special (shift+ctrl+insert) and either insert unformatted text or use the text import dialog. This dialog provides some options to structure the content for the spreadsheet, ie. separate per comma, semicolon etc. The other workflow is the internal copy/paste procedure that has structured data and allows to transpose. Mixing the two makes no sense, as Ady commented.

The actual request is WONTFIX.

However, the context menu should give a clear feedback and disable the commands that are not available. Plus, if you copy some cells in the spreadsheet this is indicated with a small animation- but after copying something in the browser the ants keep marching (yet it cannot be pasted). Seems to be filed with bug 51729.

We should change the subject into "Disable paste commands that don't apply in context", or the like.

If you frequently access data and want to manipulate it before inserting into the spreadsheet the "Data Provider" might be of help to you. For some reason it is hidden and you need to run Tools > Customize in order to show the command on the toolbar, for example.
Comment 5 Stéphane Guillou (stragu) 2023-04-05 11:49:30 UTC
(In reply to Heiko Tietze from comment #4)
> [...]
> The actual request is WONTFIX.
> 
> However, the context menu should give a clear feedback and disable the
> commands that are not available. [...]
> We should change the subject into "Disable paste commands that don't apply
> in context", or the like.

OK, done. Is the usual design to grey out or to remove in this case?

> If you frequently access data and want to manipulate it before inserting
> into the spreadsheet the "Data Provider" might be of help to you. For some
> reason it is hidden and you need to run Tools > Customize in order to show
> the command on the toolbar, for example.

Data Provider not in UI is bug 148352.
Comment 6 Heiko Tietze 2023-04-05 13:24:56 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> OK, done. Is the usual design to grey out or to remove in this case?
Gray out for temporary not available functions. Hide, if something never applies.
 
> Data Provider not in UI is bug 148352.
Yes, thank you.
Comment 7 Heiko Tietze 2023-07-18 09:18:34 UTC
Code pointer:

sc/source/ui/view/cellsh.cxx ScCellShell::GetBlockState()
sc/source/ui/view/cellsh1.cxx ScCellShell::ExecuteEdit()

case SID_PASTE_TRANSPOSED...
Comment 8 Commit Notification 2025-07-07 12:30:32 UTC
Babacea Alexandru committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f4bedb567724a6aade54489b022a447193cb490

tdf#154603 Disable 'Paste Transposed' when source is not from LO

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.