tdf#154603 Disable 'Paste Transposed' when source is not from LO

The 'Paste Transposed' command is hidden from the context menu and
greyed out in the toolbar menu when clipboard contents come from
outside LibreOffice. This prevents user confusion, as the action
is non-functional in those cases.

Change-Id: Ie4eceea7a09350d84e941256c426877c8386a8a5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187383
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins